0.5.0
Started app key shortcuts.
Done toggle lock contents.
Done show all tabs.
Done hide tab.
Done tab context open file from here.
Done tab context set src hilite.
Fixed saving size and position of app on exit.
Removed old spell check src's.
Done spell check.
Added icons to tab context menu.
Done copy filepath/dirpath/filename.
Started tab context menu.
Done select tab.
Done sort tabs.
Fixed double ask save file.
Done find/find next/find replace.
Done saving files and quit.
Done quit.
Done revert.
Done save all.
Done close tab.
Done saveas.
done switch tab.
Done Save all.
Done build/show documentaion.
Code clean.
Fixed doxyfile.
Fixed header sysntax hiliting.
Done barber pole dialog.
Done external editrors.
Done save.
Change tab on new etc.
Fixed new file.
code clean.
temp move to local svn.
Moving prefs.
Done view menu.
Done edit menu.
Done filemenu.
Re-writing menu/toolbar system.
Done single instance.
Done bookmarks.
Done No syntax hilighting.
Fixed update func menu on set prefs.
Done line highlight colour.
Removed unwanted borders from windows.
Done tabwidth.
Done hilite current line.
Done func search prefsDepth.
Done show linenumbers.
Done autoindent.
Done wrap lines.
Done scrollable menus.
Redone prefs.
Done load.
Restarted QT5 version.

0.3.0
Done nav and edit context menu.
Done search gtkqt5 documentation.
Done built in docviewer, (mostly).
Search for define now tries case sensitive then insensitive.
Done search for define.
Done open include.
Done go to definition.
Done find/replace.
Fixed highlight current line bug.
Fixed non inited pointers in document class.
Set Function menu enabled.
Done set enavbled on selected toolitems in prefs.
Done remove items from DnD prefs, and save.
Done save exit data if using quit or closing main window.
Done DnD toolbar customize in prefs.
Moved prefs to ~/.KKEditQT and ~/.KKEdit.
Font prefs changes take effect immediately, (mostly).
Done 'Apply' prefs.
Basic hightlight current line.
Basic line numbers.