@@ -1,4 +1,5 @@
 0.5.0
+Done keyboard shortcuts.
 Started app key shortcuts.
 Done toggle lock contents.
 Done show all tabs.
